# kintsuki

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  project.yml
app/AppIcon.icon/: icon.json
app/Resources/: Info.plist  Kintsuki.entitlements
app/Sources/CKintsuki/: kintsuki.h  module.modulemap
app/Sources/Kintsuki/: ContentView.swift  CrashDump.swift  DebuggerWindow.swift  EmuView.swift  Emulator.swift  HDMAInspectorWindow.swift  InputMapper.swift  InspectorView.swift  KintsukiApp.swift  MemoryViewerWindow.swift  MetalRenderer.swift  ProfilerWindow.swift  ProjectPanels.swift  RewindBuffer.swift  SaveState.swift  SaveStateBrowser.swift  TileDecoder.swift  TilemapViewerWindow.swift  VRAMViewerWindow.swift
app/Tests/: RewindRingTest.swift  run-swift-tests.sh
ares/: CMakeLists.txt
ares/ares/: CMakeLists.txt
ares/ares/component/processor/wdc65816/: instructions-other.cpp  instructions-pc.cpp  wdc65816.cpp  wdc65816.hpp
ares/ares/sfc/cpu/: cpu.cpp  cpu.hpp  dma.cpp
ares/ares/sfc/memory/: inline.hpp  memory.cpp  memory.hpp
ares/ares/sfc/system/: system.cpp
docs/: zensical.toml
docs/docs/: building.md  c-abi.md  index.md  macos-app.md  python-api.md  rewind.md  save-states.md  shadow-callstack.md  tracer.md  visual-oracle.md
docs/docs/tutorials/: crash-backtraces.md  python-quickstart.md  visual-goldens.md
python/: .gitignore  README.md  pyproject.toml
python/src/kintsuki/: __init__.py  _native.py  crash.py  diff.py  hdma.py  input.py  mesen.py  oracles.py  recorder.py  tilemap.py  visual.py
python/src/kintsuki/_vendor/: pixelmatch_numba.py
python/src/kintsuki/testing/: dream.py
python/tests/: conftest.py  test_basic.py  test_c_mesen_import.py  test_callstack.py  test_diff.py  test_dma_log.py  test_dream_fixture.py  test_hdma.py  test_input_sequence.py  test_mesen.py  test_mesen_import.py  test_oracles.py  test_ppu_state.py  test_profiler.py  test_project.py  test_recorder.py  test_tilemap.py  test_tracer.py  test_visual.py
python/tests/asm/: test_callstack.s  test_dma_log.s  test_ppu_state.s  test_profiler.s  test_rom.s
scripts/: gen_resource.py
target-kintsuki/: CMakeLists.txt  adbg.cpp  adbg.hpp  heuristics.cpp  heuristics.hpp  kintsuki.h  kintsuki_cli.cpp  libkintsuki.cpp  program.cpp  program.hpp  project.cpp  project.hpp
target-kintsuki/examples/: exec_hook.lua  ff4_kerning_port.lua  ff4_minimal_port.lua  ff4_sanity_port.lua  ff4_simple_port.lua  ff4_symbols_port.lua  memcallbacks.lua  mesen_compat.lua  smoke.lua
