[project]
name = "kintsuki"
version = "0.1.0"
description = "SNES emulator core for Lua-driven testing and DAP debug adapters (built on bsnes)."
authors = [{ name = "Emmanuel Peralta", email = "manz@ringum.net" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"

keywords = ["snes", "super famicom", "emulator", "debugger", "bsnes"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Emulators",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kintsuki"]
artifacts = ["src/kintsuki/_lib/*.dylib", "src/kintsuki/_lib/*.so", "src/kintsuki/_lib/*.dll"]

[tool.hatch.build.targets.wheel.force-include]
"src/kintsuki/_lib" = "kintsuki/_lib"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
