[project]
name = "kintsuki"
dynamic = ["version"]
description = "SNES emulator wheel for scripted testing and tracing, built on a stripped-down ares Super Famicom core."
authors = [{ name = "Emmanuel Peralta", email = "manz@ringum.net" }]
license = "ISC"
readme = "README.md"
requires-python = ">=3.10"

keywords = ["snes", "super famicom", "emulator", "debugger", "ares"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Emulators",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Version comes from the VERSION env var at build time. CI sets it to the
# pushed tag name (`${{ github.ref_name }}`) — same convention as a816.
[tool.hatch.version]
source = "env"
variable = "VERSION"

[tool.hatch.build.targets.wheel]
packages = ["src/kintsuki"]
artifacts = ["src/kintsuki/_lib/*.dylib", "src/kintsuki/_lib/*.so", "src/kintsuki/_lib/*.dll"]

[tool.hatch.build.targets.wheel.force-include]
"src/kintsuki/_lib" = "kintsuki/_lib"

# Wheel ships a prebuilt native library; CI retags it as platform-specific
# via `wheel tags --platform-tag <tag>` after `python -m build --wheel`.

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "build>=1.0",
    "wheel>=0.42",
]
